--- a/backend/compose.prod.yaml
+++ b/backend/compose.prod.yaml
@@ -1,5 +1,6 @@
 services:
   web:
+    container_name: swapi-nginx
     build:
       context: .
       dockerfile: ./docker/production/nginx/Dockerfile
@@ -27,6 +28,7 @@ services:
         condition: service_healthy  # Wait for php-fpm health check
 
   php-fpm:
+    container_name: swapi-php-fpm
     # For the php-fpm service, we will create a custom image to install the necessary PHP extensions and setup proper permissions.
     build:
       context: .
@@ -53,6 +55,7 @@ services:
         condition: service_healthy
 
   postgres:
+    container_name: swapi-postgres
     image: postgres:16
     restart: unless-stopped
     user: postgres
@@ -79,6 +82,7 @@ services:
       retries: 5
 
   redis:
+    container_name: swapi-redis
     image: redis:alpine
     restart: unless-stopped  # Automatically restart unless the service is explicitly stopped
     networks:
