create images to run scheduler and qeue work

--- a/backend/compose.dev.yaml
+++ b/backend/compose.dev.yaml
@@ -90,7 +90,52 @@ services:
     container_name: swapi-redis
     networks:
       - laravel-development
-  
+
+    # Queue Worker Service
+  laravel-queue-worker:
+    container_name: laravel-queue-worker
+    build:
+      context: .
+      dockerfile: ./docker/common/php-fpm/Dockerfile
+    tty: true
+    environment:
+      SERVICE_NAME: laravel-queue-worker
+      SERVICE_TAGS: dev
+    working_dir: /var/www
+    volumes:
+      - ./:/var/www
+    networks:
+      - laravel-development
+    ports:
+      - 9002:9002
+    command: php artisan queue:work --queue=default --sleep=3 --tries=3 --max-time=3600
+    restart: always 
+    depends_on:
+        php-fpm:
+          condition: service_started  # Wait for php-fpm to start
+    
+  # Scheduler Service
+  laravel-scheduler-worker:
+    container_name: laravel-scheduler-worker
+    build:
+      context: .
+      dockerfile: ./docker/common/php-fpm/Dockerfile
+    tty: true
+    environment:
+      SERVICE_NAME: laravel-scheduler-worker
+      SERVICE_TAGS: dev
+    working_dir: /var/www
+    ports:
+      - 9001:9001
+    volumes:
+      - ./:/var/www
+    networks:
+      - laravel-development
+    command: php artisan schedule:work
+    restart: always 
+    depends_on:
+        php-fpm:
+          condition: service_started  # Wait for php-fpm to start
   frontend:
     build:
       context: ../frontend
