--- a/backend/compose.prod.yaml
+++ b/backend/compose.prod.yaml
@@ -97,6 +97,66 @@ services:
       interval: 10s
       timeout: 5s
       retries: 3
+        # Queue Worker Service
+  laravel-queue-worker:
+    container_name: laravel-queue-worker
+    build:
+      context: .
+      dockerfile: ./docker/common/php-fpm/Dockerfile
+    tty: true
+    environment:
+      SERVICE_NAME: swapi-queue-worker
+      SERVICE_TAGS: dev
+    working_dir: /var/www
+    volumes:
+      - ./:/var/www
+    networks:
+      - laravel-development
+    ports:
+      - 9002:9002
+    command: php artisan queue:work --queue=default --sleep=3 --tries=3 --max-time=3600
+    restart: always 
+    depends_on:
+        php-fpm:
+          condition: service_started  # Wait for php-fpm to start
+    
+  # Scheduler Service
+  laravel-scheduler-worker:
+    container_name: swapi-scheduler-worker
+    build:
+      context: .
+      dockerfile: ./docker/common/php-fpm/Dockerfile
+    tty: true
+    environment:
+      SERVICE_NAME: laravel-scheduler-worker
+      SERVICE_TAGS: dev
+    working_dir: /var/www
+    ports:
+      - 9001:9001
+    volumes:
+      - ./:/var/www
+    networks:
+      - laravel-development
+    command: php artisan schedule:work
+    restart: always 
+    depends_on:
+        php-fpm:
+          condition: service_started  # Wait for php-fpm to start
+  frontend:
+    build:
+      context: ../frontend
+      dockerfile: ../frontend/Dockerfile
+    container_name: swapi-frontend
+    ports:
+      - "3000:3000"
+    volumes:
+      -  ./:/var/www
+    environment:
+      - CHOKIDAR_USEPOLLING=true
+    networks:
+      - laravel-development
+    php-fpm:
+          condition: service_healthy  # Wait for php-fpm health check
 
 networks:
   # Attach the service to the 'laravel' network.
