--- a/backend/docker/common/php-fpm/Dockerfile
+++ b/backend/docker/common/php-fpm/Dockerfile
@@ -111,7 +111,7 @@ USER www-data
 
 # Change the default command to run the entrypoint script
 ENTRYPOINT ["/usr/local/bin/entrypoint.sh"]
-
+RUN composer install
 # Expose port 9000 and start php-fpm server
 EXPOSE 9000
 CMD ["php-fpm"]
@@ -173,7 +173,7 @@ USER www-data
 
 # Change the default command to run the entrypoint script
 ENTRYPOINT ["/usr/local/bin/entrypoint.sh"]
-
+RUN composer install
 # Expose port 9000 and start php-fpm server
 EXPOSE 9000
 CMD ["php-fpm"]
